gcc/testsuite/rust/rustc/ui/proc-macro/macros-in-extern-derive.rs
extern {
    #[derive(Copy)] // { dg-error ".E0774." "" { target *-*-* } }
    fn f();
}

fn main() {}

